      (testdir): Name of directory to create for unit test files.
    * tests/run.py:
      (parse_args, reset_stats, print_summary): Common functions for test
      modules.
    * tests/spytest.py (test_method): Track success/failure of tests.
    * tests/memmap.py: Handle command-line args and track stats.
    * tests/spyfile.py: Ditto
    * tests/transforms.py: Ditto

2013-08-06	tboggs <tboggs@users.sourceforge.net>

    Turned `Image` into new-style class.

    * spectral.py:
      (Image): Now derived from object.
      (ImageArray.__new__): Fixed to work as new-style class.
      (ImageArray.__init__): New method.

    Renamed `get_image_display_data` to `get_rgb` and avoid exception due
    to missing attributes in ImageArray objects.

    * graphics/__init__.py: import get_rgb
    * graphics/graphics.py:
      (view): get_image_display_data renamed get_rgb.
      (make_pil_image): Ditto.
      (get_image_display_data):
      - Renamed get_rgb.
      - Handle ImageArray object with missing attributes.
      - Deprecate colorScale and autoScale kwargs.
    * graphics/spywxpython.py (view):
      - get_image_display_data renamed get_rgb.
      - Replace oldnumeric imports.

2013-08-04	tboggs <tboggs@users.sourceforge.net>

    Enable setting custom background color in hypercube window.

    * graphics/graphics.py (view_cube): Include `background` in doc string.
    * graphics/hypercube.py (HypercubeWindow.__init__): Set self.clear_color
      based on keyword arg, if provided.

    * spectral/spectral.py (help): Removed legacy help function.

2013-07-24	tboggs <tboggs@users.sourceforge.net>

    * algorithms/detectors.py (RX.__init__): Initialize background.

2013-04-14	tboggs <tboggs@users.sourceforge.net>

    * io/envi.py (create_image): Applied Ferdinand Deger's bug fix patch.

2013-03-30	tboggs <tboggs@users.sourceforge.net>

    * __init__.py: Updated SPy version to 0.11

2013-03-20	tboggs <tboggs@users.sourceforge.net>
